# sam3-video-tracking-onnx-export

./: .gitignore  README.md  justfile  pyproject.toml
agents/: audit_log.md  roster.md
docs/: ONBOARDING.md
notebooks/: sam3_onnx_video_demo.ipynb
patches/: 0001_image_model_use_rope_real.patch  0002_vitdet_cos_sin_rope.patch
src/sam3_onnx_equiv/: __init__.py  gradio_app.py  path_config.py  rope_equivalent.py  sam3_source_patcher.py  synthetic.py  video_orchestrator.py
src/sam3_onnx_equiv/export/: __init__.py  _equiv_loader.py  decode_head.py  image_encoder.py  memory_attention.py  memory_encoder.py  rope_freqs.py
tests/: conftest.py  test_baseline_oracle.py  test_decode_head_onnx.py  test_env_smoke.py  test_equiv_detector_matches_baseline.py  test_gradio_app.py  test_image_encoder_onnx.py  test_memory_attention_onnx.py  test_memory_encoder_onnx.py  test_rope_freqs_scope.py  test_source_patcher.py  test_video_e2e.py  test_video_oracle.py  test_vit_rope2_equiv.py  test_vit_rope_equiv.py
tools/: convert_image_encoder_tracker_fp16.py  create_equivalent_sam3_source.py  diag_frame0.py  diag_prompt.py  diag_video_fp32.py  export_decode_head.py  export_image_encoder.py  export_image_encoder_tracker.py  export_memory_attention.py  export_memory_attention_dynamic.py  export_memory_encoder.py  run_equiv_detector.py  run_onnx_video.py  run_pytorch_detector.py  run_pytorch_video.py  webgui.py
